test/libyul/yulSyntaxTests/instructions_too_few_args_1.yul
{
	pop(mul())
}
// ----
// TypeError 7000: (7-10='mul'): Function "mul" expects 2 arguments but got 0.
